Archive/5c3f9639cc4dcb5fffe62a79ce0cdafc-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In lambda function:
main.cpp:40:57: error: invalid conversion from ‘int’ to ‘int*’ [-fpermissive]
     auto holderc = make_holder([](int a){ style_b_x(1, a); }, 69);
                                                         ^
main.cpp: In lambda function:
main.cpp:41:57: error: invalid conversion from ‘int’ to ‘int*’ [-fpermissive]
     auto holderd = make_holder([](int a){ style_b_y(1, a); }, 69);
                                                         ^
